[package]
name = "btwn"
version = "0.5.0"
description = "Command line tool to filter input based on a range expression"
homepage = "https://github.com/gavynriebau/btwn"
documentation = "https://github.com/gavynriebau/btwn"
repository = "https://github.com/gavynriebau/btwn"
readme = "README.md"
authors = ["Gavyn Riebau <gavyn.riebau@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
